--- a/work-details.html
+++ b/work-details.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <meta name="keywords" content="figma,gravity,work">
       <meta name="description" content="Work on the site with Figma">
+      <link href="Normalize.css" rel="stylesheet">
       <link href="style.css" rel="stylesheet">
       <title>HTML Gravity figma</title>
   </head>
