Чето не знаю че
Здесь чето добавлено, а че я не знаю

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8">
       <meta name="keywords" content="figma,gravity,work">
       <meta name="description" content="Work on the site with Figma">
-      <link href="Normalize.css" rel="stylesheet">
-      <link href="style.css" rel="stylesheet">
+      <link href="styles/Normalize.css" rel="stylesheet">
+      <link href="styles/style.css" rel="stylesheet">
       <title>HTML Gravity figma</title>
   </head>
     <body>
@@ -201,6 +201,7 @@
                         </svg></a></li>
                 </ul>
             </section>
+            <div class="dark-footer">
             <div class="logo">
                 <svg width="75" height="24" viewBox="0 0 75 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M9 0C3.648 0 0 3.648 0 9C0 14.256 3.72 17.856 9 17.856C11.376 17.856 13.752 17.376 16.008 16.176V7.488H9.504V10.224H12.984V14.232C11.784 14.904 10.296 15.12 9.024 15.12C5.376 15.12 3.168 12.312 3.168 8.808C3.168 5.424 5.52 2.736 9 2.736C10.584 2.736 12.288 3.288 13.44 4.392L15.672 2.136C13.872 0.503999 11.352 0 9 0Z" fill="white"/>
@@ -212,6 +213,7 @@
                       <path d="M61.9942 5.904L66.9142 17.52L66.4102 18.768C65.8822 20.04 65.5943 20.592 64.0823 20.592C63.5783 20.592 63.0742 20.472 62.6182 20.304L62.2582 22.896C62.9782 23.088 63.7222 23.184 64.4662 23.184C67.3462 23.184 68.1143 21.768 69.0502 19.392L74.3063 5.904H71.3063L68.4262 13.896H68.3783L65.1622 5.904H61.9942Z" fill="white"/>
                 </svg>
             </div>
+
             <nav>
                 <ul class="ul-navigation">
                   <li><a>Travel</a></li>
@@ -251,6 +253,7 @@
                 </svg></a>
              </li>
             </ul>
+          </div>
           </footer>
     </body>
 </html>
