--- a/work-details.html
+++ b/work-details.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8">
       <meta name="keywords" content="figma,gravity,work">
       <meta name="description" content="Work on the site with Figma">
-      <link href="Normalize.css" rel="stylesheet">
-      <link href="style.css" rel="stylesheet">
+      <link href="styles/Normalize.css" rel="stylesheet">
+      <link href="styles/style.css" rel="stylesheet">
       <title>HTML Gravity figma</title>
   </head>
     <body>
